[Update] postgres 마이그레이션 및 배포 준비